fixed code so that you can create an order

--- a/omod/src/main/compass/sass/labtrackingapp.scss
+++ b/omod/src/main/compass/sass/labtrackingapp.scss
@@ -7,3 +7,11 @@ $fontPath: "../../fonts";
 @import "bootstrap/assets/stylesheets/bootstrap-compass";
 @import "bootstrap/assets/stylesheets/bootstrap";
 
+/* fix so that the 1000px max size works with bootstrap
+   if the UI changes, we can remove this
+*/
+@media (min-width: 1200px) {
+	.container {
+		width: 970px;
+	}
+}
