made the sample date selectable

--- a/omod/src/main/compass/sass/labtrackingapp.scss
+++ b/omod/src/main/compass/sass/labtrackingapp.scss
@@ -23,6 +23,11 @@ $fontPath: "../../fonts";
     margin-top:20px;
 }
 
+/* used to make the date picker button line up the the input box */
+.labtracking_datebox{
+    margin-top:0px;
+}
+
 /* used for the urency icon*/
 .urgent-icon{
     color: #ff3d3d;
