UHM-2782: Add EMR ID and barcode to printed pathology details format order form into two columns

--- a/omod/src/main/compass/sass/labtrackingapp.scss
+++ b/omod/src/main/compass/sass/labtrackingapp.scss
@@ -42,4 +42,13 @@ $fontPath: "../../fonts";
 	}
 }
 
+/* two columns when printing pathology form */
+@media print {
+  #content {
+    column-count: 2;
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+  }
+}
+
 
