UHM-6394, mandate the collection of certain fields

--- a/omod/src/main/compass/sass/labtrackingapp.scss
+++ b/omod/src/main/compass/sass/labtrackingapp.scss
@@ -28,6 +28,11 @@ $fontPath: "../../fonts";
     margin-top:0px;
 }
 
+.form-group.required .control-label:after{
+  content:"*";
+  color:red;
+}
+
 /* used for the urency icon*/
 .urgent-icon{
     color: #ff3d3d;
